css/game.css
@media screen and (orientation: portrait) {
	:root {
		--margin-size:		1vw;
		--eaten-piece-size: 3vw;
		--picture-size: 	15vw;
		--icon-size: 		3vw;
		--title-size: 		3vw;
		--font-size:		2.25vw;
		--btn-size: 		3vw;
		--border-radius: 	0.75vw;

		--eaten-panel-line-height: 1vw;
		--game-content-display:    unset;
		--layer-margin-side:       auto;
		--side-layer-padding-top:  0;
		--side-layer-padding-left: var(--margin-size);
		--scrollbar-size:          1vw;

		--cell-size: calc((100vw - 4 * var(--margin-size)) / 8);
	}
}

@media screen and (orientation: landscape) {
	:root {
		--margin-size:		1vh;
		--eaten-piece-size: 2.8vh;
		--picture-size:		12vh;
		--icon-size:		3vh;
		--title-size:		3vh;
		--font-size:		2.25vh;
		--btn-size:			3vh;
		--border-radius: 	0.75vh;

		--eaten-panel-line-height: 1vh;
		--game-content-display:    flex;
		--layer-margin-side:       unset;
		--side-layer-padding-top:  var(--margin-size);
		--side-layer-padding-left: 0;
		--scrollbar-size:          1vh;

		--cell-size: calc((100vh - 5 * var(--margin-size) - var(--picture-size)) / 8.0);
	}
}

/* 176vh is calculated by computing: 2 * --layer-size */
@media (max-width: 174vh) and (orientation: landscape) {
	:root {
		--margin-size:		1vh;
		--eaten-piece-size: 3vh;
		--picture-size:		12vh;
		--icon-size:		3vh;
		--title-size:		3vh;
		--font-size:		2.25vh;
		--btn-size:			3vh;
		--border-radius: 	0.75vh;

		--game-content-display:    unset;
		--layer-margin-side:       auto;
		--side-layer-padding-top:  0;
		--side-layer-padding-left: var(--margin-size);
		--scrollbar-size:          1vh;

		--cell-size: calc((100vh - 5 * var(--margin-size) - var(--picture-size)) / 8);
	}
}

:root {
	--canvas-size: calc(var(--margin-size) * 2 + var(--cell-size) * 8);
	--layer-size: calc(var(--canvas-size) + var(--margin-size) * 2);
}

.x0 { left: calc(var(--margin-size) + (0 * var(--cell-size))); }
.x1 { left: calc(var(--margin-size) + (1 * var(--cell-size))); }
.x2 { left: calc(var(--margin-size) + (2 * var(--cell-size))); }
.x3 { left: calc(var(--margin-size) + (3 * var(--cell-size))); }
.x4 { left: calc(var(--margin-size) + (4 * var(--cell-size))); }
.x5 { left: calc(var(--margin-size) + (5 * var(--cell-size))); }
.x6 { left: calc(var(--margin-size) + (6 * var(--cell-size))); }
.x7 { left: calc(var(--margin-size) + (7 * var(--cell-size))); }

.y0 { top: calc(var(--margin-size) + (0 * var(--cell-size))); }
.y1 { top: calc(var(--margin-size) + (1 * var(--cell-size))); }
.y2 { top: calc(var(--margin-size) + (2 * var(--cell-size))); }
.y3 { top: calc(var(--margin-size) + (3 * var(--cell-size))); }
.y4 { top: calc(var(--margin-size) + (4 * var(--cell-size))); }
.y5 { top: calc(var(--margin-size) + (5 * var(--cell-size))); }
.y6 { top: calc(var(--margin-size) + (6 * var(--cell-size))); }
.y7 { top: calc(var(--margin-size) + (7 * var(--cell-size))); }

.white { color: white; }
.black { color: black; }
.bg-white { background-color: white; }
.bg-black { background-color: black; }
.hidden { display: none !important; }

.numbering {
	text-align: left;
	margin-left: calc(var(--margin-size) / 4);
	position: absolute;
	font-weight: bold;
	font-size: var(--font-size);
}

.lettering {
	text-align: right;
	margin-top: calc(var(--cell-size) - var(--margin-size) * 2.8);
	margin-right: calc(var(--margin-size) * 0.5);
	font-weight: bold;
	font-size: var(--font-size);
}

.grid {
	width: var(--cell-size);
	height: var(--cell-size);
	transition: .2s all ease;
	position: absolute;
}

.piece {
	width: calc(var(--cell-size));
	height: calc(var(--cell-size));

	position: absolute;
	float: left;
	transition: .2s all ease;
	z-index: 3;
}

.canvas-border {
	position: absolute;
	width: var(--canvas-size);
	height: var(--canvas-size);
	z-index: 0;
}

.eaten-piece {
	width: var(--eaten-piece-size);
	height: var(--eaten-piece-size);
}

.eaten-panel {
	height: calc(var(--eaten-piece-size) * 2);
	width: calc(var(--eaten-piece-size) * 8);
	margin-right: unset !important;
	line-height: var(--eaten-panel-line-height);
}

#blacksEaten {
	margin-left: calc(var(--margin-size) / 4) !important;
}

#whitesEaten {
	margin-left: calc(var(--margin-size) / -4) !important;
}



.player-pic {
	width: var(--picture-size);
	height: var(--picture-size);
	margin: var(--margin-size);
	border-radius: calc(var(--picture-size) / 10);
	background-color: white;
	border: calc(var(--margin-size) * 0.7);
	border-style: solid;
}

#B-player-image {
	border-color: black;
}

#W-player-image {
	border-color: white;
}

.player-pic.pull-left  { margin-left: 0; }
.player-pic.pull-right { margin-right: 0; }

.player-name {
	font-size: var(--title-size);
	margin-top: var(--margin-size) !important;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	width: calc(var(--eaten-piece-size) * 8);
}

#game-content {
	display: var(--game-content-display);
}

#canvas-layer {
	left: 0;
	position: absolute;
	z-index: 3;
}

#canvas-wrap {
	position: relative;
	height: var(--canvas-size);
	/*margin-top: var(--margin-size);*/
}

#toolbar-wrap {
	margin: 0 !important;
}

#action-layer {
	background-color: rgba(255, 255, 255, 0.2);
	padding-left: var(--margin-size);
	padding-right: var(--margin-size);
	padding-bottom: var(--margin-size);
	margin-left: auto;
	margin-right: var(--layer-margin-side);
	width: var(--layer-size);
}

#home-btn {
	font-size: var(--font-size);
	padding: calc(var(--btn-size) / 3);
	padding-left: calc(var(--btn-size) / 1.5);
	padding-right: calc(var(--btn-size) / 1.5);
	border-radius: var(--border-radius);
	margin-top: calc(var(--picture-size) * 0.5 + var(--margin-size) - var(--btn-size));
	background-image: unset;
	background-color: black;
	border: unset;
	box-shadow: unset;
}

#side-layer {
	background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2));
	padding-left: var(--side-layer-padding-left);
	padding-right: var(--margin-size);
	padding-top: var(--side-layer-padding-top);
	margin-left: var(--layer-margin-side);
	margin-right: auto;
	width: var(--layer-size);
	color: white;
	text-align: left;
	height: calc(var(--layer-size) + var(--picture-size) + var(--margin-size));
	display: flex;
	flex-direction: column;
}

#utility-section {
	height: calc(70% - var(--margin-size));
	margin-bottom: calc(var(--margin-size));
	padding: calc(var(--margin-size));
	background-color: #000000db;
	border-radius: var(--border-radius);
}

#chat-section {
	height: 30%;
	background-color: #000000db;
	border-radius: var(--border-radius);
	margin-bottom: var(--margin-size);
}

